feat(registros): endpoint para eliminar un registro extraido
